Purpose: Bug fix
Description:
Arabica exhibited strange errors when linker found wrong versions of
header files.  This happened because include directories were
given to linker in the wrong order.

Solution:
Move include directories from AM_CFLAGS variable to INCLUDES
variable to put them before CPPFLAGS variable.  Trust me, it works.
This bug may also have contributed to strange errors on other platforms
(kelgia?).

Platforms tested:
copper, sleipnir, arabica.
	(h5dump broke while building on arabica, but this happened in
	a clean checkout, too).

--- a/fortran/src/Makefile.in
+++ b/fortran/src/Makefile.in
@@ -191,7 +191,7 @@ F9XMODFLAG = @F9XMODFLAG@
 
 # Include src directory in both Fortran and C flags (C compiler is used
 # for linking)
-AM_CFLAGS = -I$(top_srcdir)/src
+INCLUDES = -I$(top_srcdir)/src
 AM_FFLAGS = -I$(top_srcdir)/src
 
 # This is our main target, the fortran library
