--- a/hl/tools/gif2h5/Makefile.in
+++ b/hl/tools/gif2h5/Makefile.in
@@ -190,7 +190,7 @@ F9XMODEXT = @F9XMODEXT@
 F9XMODFLAG = @F9XMODFLAG@
 
 # Include src and tools/lib directories
-AM_CFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/tools/lib
+INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/tools/lib
 
 # These are our main targets, the tools
 bin_PROGRAMS = gif2h5 h52gif
