--- a/tools/h5diff/Makefile.in
+++ b/tools/h5diff/Makefile.in
@@ -190,7 +190,7 @@ F9XMODEXT = @F9XMODEXT@
 F9XMODFLAG = @F9XMODFLAG@
 
 # Include src and tools/lib directories
-AM_CFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/tools/lib
+INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/tools/lib
 
 # Always build and test h5diff but build and test ph5diff only if parallel
 # is enabled.
