--- a/tools/h5jam/Makefile.in
+++ b/tools/h5jam/Makefile.in
@@ -190,7 +190,7 @@ F9XMODFLAG = @F9XMODFLAG@
 #
 
 # Include src and tools/lib directories
-AM_CFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/tools/lib
+INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/tools/lib
 
 bin_PROGRAMS = h5jam h5unjam
 check_PROGRAMS = tellub h5jamgentest getub
