--- a/tools/misc/Makefile.in
+++ b/tools/misc/Makefile.in
@@ -190,7 +190,7 @@ F9XMODEXT = @F9XMODEXT@
 F9XMODFLAG = @F9XMODFLAG@
 
 # Include src directory
-AM_CFLAGS = -I$(top_srcdir)/src
+INCLUDES = -I$(top_srcdir)/src
 
 # Build pdb2hdf5 if LLNL's PDB is present (checked in configure)
 @BUILD_PDB2HDF_CONDITIONAL_TRUE@PDB2HDF = pdb2hdf5
