--- a/trunk/fortran/src/Makefile.in
+++ b/trunk/fortran/src/Makefile.in
@@ -191,7 +191,7 @@ F9XMODFLAG = @F9XMODFLAG@
 
 # Include src directory in both Fortran and C flags (C compiler is used
 # for linking)
-AM_CFLAGS = -I$(top_srcdir)/src
+INCLUDES = -I$(top_srcdir)/src
 AM_FFLAGS = -I$(top_srcdir)/src
 
 # This is our main target, the fortran library
