--- a/trunk/fortran/test/Makefile.in
+++ b/trunk/fortran/test/Makefile.in
@@ -191,7 +191,7 @@ F9XMODFLAG = @F9XMODFLAG@
 
 # Include files
 AM_FFLAGS = -I$(top_builddir)/fortran/src $(F9XMODFLAG)$(top_builddir)/fortran/src
-AM_CFLAGS = -I$(top_srcdir)/src
+INCLUDES = -I$(top_srcdir)/src
 
 # The Fortran test library
 lib_LTLIBRARIES = libh5test_fortran.la
