--- a/trunk/perform/Makefile.in
+++ b/trunk/perform/Makefile.in
@@ -189,7 +189,7 @@ H5FC_PP = $(bindir)/h5pfc
 F9XMODEXT = @F9XMODEXT@
 F9XMODFLAG = @F9XMODFLAG@
 
-AM_CFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/test -I$(top_srcdir)/tools/lib
+INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/test -I$(top_srcdir)/tools/lib
 
 @BUILD_PARALLEL_CONDITIONAL_TRUE@TEST_PROG_PARA = h5perf
 
