--- a/trunk/tools/h5dump/Makefile.in
+++ b/trunk/tools/h5dump/Makefile.in
@@ -190,7 +190,7 @@ F9XMODEXT = @F9XMODEXT@
 F9XMODFLAG = @F9XMODFLAG@
 
 # Include files in /src directory and /tools/lib directory
-AM_CFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/tools/lib
+INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/tools/lib
 
 # Test programs and scripts
 TEST_PROG = h5dumpgentest
