--- a/trunk/tools/lib/Makefile.in
+++ b/trunk/tools/lib/Makefile.in
@@ -190,7 +190,7 @@ F9XMODEXT = @F9XMODEXT@
 F9XMODFLAG = @F9XMODFLAG@
 
 # Include files in /src directory
-AM_CFLAGS = -I$(top_srcdir)/src
+INCLUDES = -I$(top_srcdir)/src
 
 # This is our main target, the h5tools library.  We link this library
 # statically because some systems can only link executables to a single
