Purpose: Bug fix
Description:
modi4 dies during build with strange errors.
The root cause of these is a two-year-old hack in HDF5's libtool
script that only takes effect on IRIX.

Solution:
Edited the libtool hack (by editing ltmain.sh) to correct a bug in
the hack.
Also made sure that compiler-specific DEFAULT_LIBS are used
when linking.

Platforms tested:
sleipnir, copper, modi4, sol

--- a/configure.in
+++ b/configure.in
@@ -65,7 +65,7 @@ dnl Different compilers may need default libraries. They are specified in
 dnl the config/* files, so we put this statement here so that it'll be
 dnl set by the code which follows...
 dnl
-AC_SUBST(DEFAULT_LIBS) DEFAULT_LIBS=""
+DEFAULT_LIBS=""
 
 dnl ----------------------------------------------------------------------
 dnl Set prefix default (install directory) to a directory in the build area.
@@ -2893,6 +2893,11 @@ else
   pwd=pwd
 fi
 AC_SUBST([ROOT]) ROOT="`$pwd`"
+
+dnl ----------------------------------------------------------------------
+dnl Move any compiler-specific libraries into the main LIBS varaible.
+dnl 
+LIBS="$DEFAULT_LIBS $LIBS"
 
 dnl ----------------------------------------------------------------------
 dnl Determine the runtime libraries we may need to include in the
