--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -65,7 +65,7 @@ dnl Different compilers may need default libraries. They are specified in
 dnl the config/* files, so we put this statement here so that it'll be
 dnl set by the code which follows...
 dnl
-AC_SUBST(DEFAULT_LIBS) DEFAULT_LIBS=""
+DEFAULT_LIBS=""
 
 dnl ----------------------------------------------------------------------
 dnl Set prefix default (install directory) to a directory in the build area.
@@ -2893,6 +2893,11 @@ else
   pwd=pwd
 fi
 AC_SUBST([ROOT]) ROOT="`$pwd`"
+
+dnl ----------------------------------------------------------------------
+dnl Move any compiler-specific libraries into the main LIBS varaible.
+dnl 
+LIBS="$DEFAULT_LIBS $LIBS"
 
 dnl ----------------------------------------------------------------------
 dnl Determine the runtime libraries we may need to include in the
