--- a/trunk/Makefile.in
+++ b/trunk/Makefile.in
@@ -159,6 +159,7 @@ TRACE_API = @TRACE_API@
 USE_FILTER_DEFLATE = @USE_FILTER_DEFLATE@
 USE_FILTER_FLETCHER32 = @USE_FILTER_FLETCHER32@
 USE_FILTER_NBIT = @USE_FILTER_NBIT@
+USE_FILTER_SCALEOFFSET = @USE_FILTER_SCALEOFFSET@
 USE_FILTER_SHUFFLE = @USE_FILTER_SHUFFLE@
 USE_FILTER_SZIP = @USE_FILTER_SZIP@
 VERSION = @VERSION@
